examples/test/testpolicy3705.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3705
  namespace: namespace193
spec:
  podSelector:
    matchLabels:
      key43: value17
      key46: value41
      key11: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value3
          key16: value3
          key35: value36
      podSelector:
        matchLabels:
          key2: value13
